Issue covers from JSON file; single issue.html file to display every issue

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ body {
     overflow-y: scroll;
 }
 
+.metaTitle {
+  font-weight: 700;
+}
+
 
 .navbar {
   height: 80pt;
